[gd_scene load_steps=6 format=3 uid="uid://dkxt8pog23mmg"]

[ext_resource type="PackedScene" uid="uid://d0yyaf3xp7gic" path="res://Scenes/claw_arm.tscn" id="1_n1uco"]
[ext_resource type="Script" path="res://Scripts/player.gd" id="1_xfo1h"]

[sub_resource type="BoxMesh" id="BoxMesh_abm5y"]

[sub_resource type="BoxMesh" id="BoxMesh_b0tqw"]

[sub_resource type="ViewportTexture" id="ViewportTexture_5hmpd"]
viewport_path = NodePath("Machine/ClawCamViewport")

[node name="Player" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.248724, 0)
script = ExtResource("1_xfo1h")

[node name="Machine" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.01129, 0)

[node name="Camera3D" type="Camera3D" parent="Machine"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 0)

[node name="ClawArm" parent="Machine" instance=ExtResource("1_n1uco")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 14.0877, -2, 1.25181)

[node name="Cabin" type="Node3D" parent="Machine"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.60326, 0, -0.748186)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Machine/Cabin"]
transform = Transform3D(3.0642, 0, 0, 0, 4.97043, 0, 0, 0, 3.80784, -3.50873, 0.252478, 1.89386)
mesh = SubResource("BoxMesh_abm5y")
skeleton = NodePath("../..")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Machine/Cabin"]
transform = Transform3D(3.17624, 0, 0, 0, 1.62875, 0, 0, 0, 4.61759, -3.44409, -1.44508, 1.88361)
mesh = SubResource("BoxMesh_b0tqw")

[node name="ClawCamDisplay" type="Sprite3D" parent="Machine"]
transform = Transform3D(-6.05618e-09, 0, 0.138549, 0, 0.138549, 0, -0.138549, 0, -6.05618e-09, 1.2, -0.5, -1.2)
texture = SubResource("ViewportTexture_5hmpd")

[node name="ClawCamViewport" type="SubViewport" parent="Machine"]

[node name="ClawCam" type="Camera3D" parent="Machine/ClawCamViewport"]
unique_name_in_owner = true
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 0)
